samples/_failures_safe/1761691135_13fc12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5f50f5f.c: In function ‘main’:
./samples/SAFE/__tmp_e5f50f5f.c:139: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_e5f50f5f.c:138:29: note: to match this ‘(’
  138 |     int rows = get_valid_int("Enter number of rows (1-10): ", 1, MAX_SIZE
      |                             ^
./samples/SAFE/__tmp_e5f50f5f.c:138:5: error: expected declaration or statement at end of input
  138 |     int rows = get_valid_int("Enter number of rows (1-10): ", 1, MAX_SIZE
      |     ^~~
